--- a/_posts/2022-09-02-PQ-日式風格援非-日本在非洲以人才培育力抗中國大撒幣.html
+++ b/_posts/2022-09-02-PQ-日式風格援非-日本在非洲以人才培育力抗中國大撒幣.html
@@ -20,7 +20,7 @@ author: 陳怡菱
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-1024x708.jpg" alt="" class="wp-image-113108" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-1024x708.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-300x207.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-768x531.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-1536x1062.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-2048x1415.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>第八屆TICAD會議，日本岸田首相以「投資人才」作為主軸。（圖／首相官邸）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-1024x708.jpg" alt="" class="wp-image-113108" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-1024x708.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-300x207.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-768x531.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-1536x1062.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7753a82a-20200827ticad02-2048x1415.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>第八屆TICAD會議，日本岸田首相以「投資人才」作為主軸。（圖／首相官邸）</figcaption></figure>
 
 
 
