--- a/_posts/2022-09-01-INITIUM-后反恐时代-大迂回-与未完成的革命-走向新-冷战-的中东世界.html
+++ b/_posts/2022-09-01-INITIUM-后反恐时代-大迂回-与未完成的革命-走向新-冷战-的中东世界.html
@@ -5,7 +5,7 @@ date: 2022-09-01 22:26:00.000000000 +00:00
 link: https://theinitium.com/article/20220902-international-middle-east-great-transformation/
 categories: initium
 tags: blog
-author: 特约撰稿人 刘怡 发自北京、巴格达、贝鲁特
+author: 刘怡
 ---
 
 <p>「革命已成往事，革命尚未完成。」</p><p>特约撰稿人 刘怡 发自北京、巴格达、贝鲁特</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220902-international-middle-east-great-transformation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/0a285d5efc8f4408988a551966287efc.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年11月7日，伊拉克首都巴格达，邻近“绿区”的解放广场聚集近300多名示威者，抗议当地政府腐败及国内经济下滑。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
