--- a/_posts/2022-09-02-PQ-日本沈沒-現實迷你版-日本最南端沖之鳥島距離沈沒僅剩16公分.html
+++ b/_posts/2022-09-02-PQ-日本沈沒-現實迷你版-日本最南端沖之鳥島距離沈沒僅剩16公分.html
@@ -17,7 +17,7 @@ author: 陳怡菱
 
 
 <figure class="wp-block-embed aligncenter is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="日本最南端・沖ノ鳥島の貴重映像、１６年ぶりの大規模調査に同行" src="https://www.youtube.com/embed/qHdM7Cfu7nI?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="日本最南端・沖ノ鳥島の貴重映像、１６年ぶりの大規模調査に同行" src="https://www.youtube.com/embed/qHdM7Cfu7nI?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><figcaption>電視台與專家團隊同行，針對沖之鳥島在2021年12月進行睽違16年的大規模調查。</figcaption></figure>
 
 
