--- a/_posts/2022-09-03-VOCUS-暗雲秋瑟-九月天-下.html
+++ b/_posts/2022-09-03-VOCUS-暗雲秋瑟-九月天-下.html
@@ -46,9 +46,8 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">（小聲說）廣告時間：</div>
 <div class="draft-block draft--p left">最近有些突發奇想，打算把一些文字檔轉成線上廣播（咦？）的形式，就當作是一種新的交流；但由於資源有限，我用手機錄音（一好球！）、一口氣讀完還沒有剪接（兩好球！）……然後背景音樂就哈哈（三好球？），有空歡迎來坐坐，純玩票性質，還請見諒跟包涵。</div>
-<div><iframe allowfullscreen src="https://open.firstory.me/story/cl7jr5udo02bp01wm24u23xvv"></div>
+<div><iframe allowfullscreen src="https://open.firstory.me/story/cl7jr5udo02bp01wm24u23xvv"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">圖文來源、一併致謝：</div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Korean_Air_Lines_Flight_007" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Korean_Air_Lines_Flight_007</a></div>
 <div class="draft-block draft--p left"><a href="https://www.weaponews.com/news/65360847-modernization-of-the-submarine-base-of-the-pacific-fleet-commenced-at-.html" target="_blank" class="draft--a">https://www.weaponews.com/news/65360847-modernization-of-the-submarine-base-of-the-pacific-fleet-commenced-at-.html</a></div>
-<div class="draft-block draft--p left"></div>
