--- a/_posts/2022-09-03-INITIUM-写给当时的你-三-房间里的大象-潦倒的理想-可决定未来的还是我们这些人.html
+++ b/_posts/2022-09-03-INITIUM-写给当时的你-三-房间里的大象-潦倒的理想-可决定未来的还是我们这些人.html
@@ -10,11 +10,11 @@ author: 端传媒编辑部
 
 <p>「理想可饱腹吗？可取暖吗？可带货吗？可“治疗精神内耗”吗？」</p><p>端传媒编辑部</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220904-7th-year-letter-to-the-past-3/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/37d5bd6c98a8425ca0edf55c4075a81c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small>端传媒七岁了。七年，挺久的。七年前，你在哪里呢？这些年，你有过怎样的故事？一路来，端珍藏了许多读者寄来的留言，这次的周年编读活动“写给当时的你”，我们的编辑记者们找回了许多当时的困惑或情感，并会试著与你隔空对话：时至今日，旧时的存疑是否寻得解答，未来又会怎样呢？这是第三篇，我们聊聊理想、大山和自己。</small></p>
-<p>2020年，读者Gloria留言：</p>
+<p><strong>2020年，读者Gloria留言：</strong></p>
 <p>真正有“理想”的记者要么身陷囹圄，要么穷困潦倒，根本不会去谈那分文不值的“理想”；没有脸皮的怪物却套上“理想”的面具，来收割关注、金钱和声望。“新闻理想”到底是个什么鬼东西？</p>
-<p>2019年，读者咸鱼姬留言：</p>
+<p><strong>2019年，读者咸鱼姬留言：</strong></p>
 <p>大象在房间里手舞足蹈，利维坦在脚下张牙舞爪，而墙内人或举起屠刀砍向身边人，或在万国来朝的梦中跳起忠字舞。在墙内，所有的苦难都注定变成污名，所有的苦难都注定变成歌颂统治者的素材。</p>
-<p>2017年，读者Alex Z留言：</p>
+<p><strong>2017年，读者Alex Z留言：</strong></p>
 <p>这场博弈之中还有一个不可忽视的定量，在可见范围内将长期不变。在现代科技条件下，台湾海峡的距离几乎可以忽略不计。打个比方，这就好比是两岸脸贴着脸站在一起。这是大自然决定的，只要地理上不做改变，大家谁都搬不走。我们或许可以选择抱在一起互相撕咬，也可以选择抱在一起共同取暖。说到底，决定两岸未来的还是我们这些人。</p>
 <p><strong>以下是来自编辑部的三封回信：</strong></p>
 <blockquote>
