--- a/_posts/2022-09-04-INITIUM-赌猪-暴涨暴跌-轮回往复-中国6亿头猪的-造富游戏.html
+++ b/_posts/2022-09-04-INITIUM-赌猪-暴涨暴跌-轮回往复-中国6亿头猪的-造富游戏.html
@@ -10,80 +10,18 @@ author: 端传媒记者 王二 发自新加坡
 
 <p>「家财万贯，带毛的不算。」</p><p>端传媒记者 王二 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220905-international-pig-farmers-in-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/d2cae192d10b406d9448924560718740.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="养猪场的一头猪。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">养猪场的一头猪。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p><small>【编者按】以前只有上流社会才吃得起的肉，今天我们人人都可以享受得到。在人人都终于可以当食肉兽的今天，我们却怀疑起肉来了：肉食是不是气候变化的元凶？食肉是不是慢性自杀？肉摊上源源不绝的供应，会有停下来的一刻吗？如果不能吃真的肉，那人造肉能代替肉吗？透过寻寻常常的一块肉，我们其实都有份在选择一个不同的未来。这是端传媒七周年专题报导“肉食动物”的第二篇，欢迎阅读第一篇<a href="https://theinitium.com/project/20220818-international-no-more-meats-in-the-future/">《无肉的未来：二十年后，你的干炒牛河里还有牛肉吗？》</a>。</small></p>
-<p>你我桌上的一盘猪肉，背后可能是一个大起大落的造富故事。也许一夜成为百万富翁，也许一夜倾家荡产，甚至家破人亡。中国市场饲养和食用了全世界近一半的活猪，这个巨大的资本和市场，决定著一头头养在中国偏僻农村的猪的命运。虽然人均消费量已经多年趋于平稳，但每3-4年，猪肉在中国就会经历一个暴涨暴跌的轮回。这被称为“猪周期”。</p>
-<p>在过去3年，中国经历了世界猪肉发展史上闻所未闻的“超级猪周期”，猪价涨幅前所未有。生猪价格在2018年6月后继续33个月上涨，涨幅高达262%。这源自一场大瘟疫——非洲猪瘟，这一古老的病毒于2018年在中国爆发，给猪带来灭顶之灾。到了2019年，中国的生猪数量减少了70%。它们或因感染非洲猪瘟暴毙，或因感染风险被无害化处死，或因恐慌性抛售。这造成中国生猪市场的供需关系发生逆转，供应远不足于需求，猪价骤升。</p>
-<p>高额利润吸引了众多参与者，有原来的从业者加大投资，更有大量的新晋者前赴后继。在中国猪肉供应的源头——生猪养殖市场中，近一半饲养者为个体农户或中小型养殖厂。但越来越多的人入局，意味着入越来越多的猪被饲养和售卖，市场价格又开始因为供应远大于需求而暴跌，众多进入这个周期的人被套牢。大量猪仔被遗弃。</p>
-<p>在这场“超级猪周期”造富游戏中，赌注就是一头一头的猪——母猪、猪仔、肥猪。在这场“赌猪”场里，庄家通吃。它隐藏在系统之中，唯一目标只是要有猪。谁能拒绝暴富的诱惑？但筹码早已标好了价格。</p>
- 
+<p>你我桌上的一盘猪肉，背后可能是一个大起大落的造富故事。也许一夜成为百万富翁，也许一夜倾家荡产，甚至家破人亡。中国市场饲养和食用了全世界近一半的活猪，这个巨大的资本和市场，决定著一头头养在中国偏僻农村的猪的命运。虽然人均消费量已经多年趋于平稳，但每3-4年，猪肉在中国就会经历一个暴涨暴跌的轮回。这被称为“猪周期”。<br><br>在过去3年，中国经历了世界猪肉发展史上闻所未闻的“超级猪周期”，猪价涨幅前所未有。生猪价格在2018年6月后继续33个月上涨，涨幅高达262%。这源自一场大瘟疫——非洲猪瘟，这一古老的病毒于2018年在中国爆发，给猪带来灭顶之灾。到了2019年，中国的生猪数量减少了70%。它们或因感染非洲猪瘟暴毙，或因感染风险被无害化处死，或因恐慌性抛售。这造成中国生猪市场的供需关系发生逆转，供应远不足于需求，猪价骤升。<br><br>高额利润吸引了众多参与者，有原来的从业者加大投资，更有大量的新晋者前赴后继。在中国猪肉供应的源头——生猪养殖市场中，近一半饲养者为个体农户或中小型养殖厂。但越来越多的人入局，意味着入越来越多的猪被饲养和售卖，市场价格又开始因为供应远大于需求而暴跌，众多进入这个周期的人被套牢。大量猪仔被遗弃。<br><br>在这场“超级猪周期”造富游戏中，赌注就是一头一头的猪——母猪、猪仔、肥猪。在这场“赌猪”场里，庄家通吃。它隐藏在系统之中，唯一目标只是要有猪。谁能拒绝暴富的诱惑？但筹码早已标好了价格。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220905-international-pig-farmers-in-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/4627f416bf9744adacce5505534827f9.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2020年5月12日，贵州省毕节市，一名饲养员在养猪场检查小猪的生长情况。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2020年5月12日，贵州省毕节市，一名饲养员在养猪场检查小猪的生长情况。<span class="credit">摄：Deng Gang/VCG via Getty Images</span></figcaption></figure>
 
- 
- 
- 
- 
+<h2>暴利刺激著所有人</h2>
+<p>2019年6月的一天，下午三点多，两辆价格不菲的奔驰轿车停在徐阳在湖北宜昌农村老家的门口。三个男人走进家门，他们属于两个收购方。那时，谁家有要出栏（出栏一般是指猪、羊等动物长到屠宰重量后被交易）的生猪，消息常常不胫而走。来的人的车上都放着成捆的现金——也许是为了展示现金的诱惑，也许为了尽快锁定交易。徐阳说，自己跟父母谁都没见过那么多现金，“冲击力是挺强的”。</p>
+<p>两方都报了价，没有分歧，价高者得。110多头猪，平均体重220斤，63万元。可没人准备点钞机，徐阳和父母只能把一沓一沓的钱挨个拆开，用手点。但这耗时太漫长，眨眼就到了晚饭时间，还没数完。大家达成协议，第二天一早，由徐家带着这些钱到银行存起来，多退少补。数钱对银行来说再容易不过。来收购的人留下了吃了晚饭。大家都很开心，尤其是徐阳的父母。一家三口和一行三人一起喝了很多酒。但中途，徐阳看到母亲张罗完他们的饭菜之后，把没点完的现金拽到了里屋。“我估计她数了很晚。”但现金的刺激一次就够了。此后的交易，徐家全部要求转帐交易。</p>
+<p>三年前的那个时候，生猪的价格正随着猪肉价格逐渐攀向历史最高值。非洲猪瘟横扫中国，生猪存栏大减。生猪市场上，一猪难求。徐阳家生猪出栏时，每斤的价格已经从2018年的不到10块涨到了当时的17.5元。由父母自己操持的家庭养猪场就不计人工成本，综合饲料、疫苗等投入以后，每头猪每斤的生产成本在7.5元之内。这是徐家第一批出栏的生猪，110多头，一头生猪平均净赚2200元。</p>
  
  
  
 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
-
- 
- 
- 
- 
  
  
  
@@ -108,9 +46,68 @@ author: 端传媒记者 王二 发自新加坡
  
  
  
-<p><a class="image" href="https://theinitium.com/article/20220905-international-pig-farmers-in-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/4627f416bf9744adacce5505534827f9.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2020年5月12日，贵州省毕节市，一名饲养员在养猪场检查小猪的生长情况。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">2020年5月12日，贵州省毕节市，一名饲养员在养猪场检查小猪的生长情况。<span class="credit">摄：Deng Gang/VCG via Getty Images</span></figcaption><p></p><p>暴利刺激著所有人</p><p>2019年6月的一天，下午三点多，两辆价格不菲的奔驰轿车停在徐阳在湖北宜昌农村老家的门口。三个男人走进家门，他们属于两个收购方。那时，谁家有要出栏（出栏一般是指猪、羊等动物长到屠宰重量后被交易）的生猪，消息常常不胫而走。来的人的车上都放着成捆的现金——也许是为了展示现金的诱惑，也许为了尽快锁定交易。徐阳说，自己跟父母谁都没见过那么多现金，“冲击力是挺强的”。</p><p>两方都报了价，没有分歧，价高者得。110多头猪，平均体重220斤，63万元。可没人准备点钞机，徐阳和父母只能把一沓一沓的钱挨个拆开，用手点。但这耗时太漫长，眨眼就到了晚饭时间，还没数完。大家达成协议，第二天一早，由徐家带着这些钱到银行存起来，多退少补。数钱对银行来说再容易不过。来收购的人留下了吃了晚饭。大家都很开心，尤其是徐阳的父母。一家三口和一行三人一起喝了很多酒。但中途，徐阳看到母亲张罗完他们的饭菜之后，把没点完的现金拽到了里屋。“我估计她数了很晚。”但现金的刺激一次就够了。此后的交易，徐家全部要求转帐交易。</p><p>三年前的那个时候，生猪的价格正随着猪肉价格逐渐攀向历史最高值。非洲猪瘟横扫中国，生猪存栏大减。生猪市场上，一猪难求。徐阳家生猪出栏时，每斤的价格已经从2018年的不到10块涨到了当时的17.5元。由父母自己操持的家庭养猪场就不计人工成本，综合饲料、疫苗等投入以后，每头猪每斤的生产成本在7.5元之内。这是徐家第一批出栏的生猪，110多头，一头生猪平均净赚2200元。</p><p>第一批赚到钱后，徐家旋即决定再多抓些猪来养。他们从在江苏一家专业猪场做经理人的亲戚那里赊来了300只一个多月大的猪仔，每只300元。从江苏太湖到湖北宜昌，长途跋涉让到家后的小猪陆续死去一些，最后成活不到270个。在饲养6个月左右之后，第二批生猪也到了出栏的时候。徐家迎来了生猪收购价格顶峰。</p><p>“我们挣钱的时候就是那一批。”徐阳说。2019年11月多，徐家的生猪卖到了每斤19元钱。整个生猪市场彼时的价格相比于一年半以前暴增了262%。这一批的生猪一直陆续卖到2020年4月。徐家进账100多万元。</p><p><a class="image" href="https://theinitium.com/article/20220905-international-pig-farmers-in-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/3bb664d3b1ad4a759f83fdf607cd0bc1.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            </p><figcaption itemprop="caption"><span class="credit"></span></figcaption><p></p><p>但是，就在第二批猪卖掉不久，徐家的养猪场被村民举报环境污染。很快，从村委会到畜牧局甚至水利局的人都来了，看起来情势严重。徐家开始面临罚款，而后罚款变为整改。上面要求徐家修建正规化粪池。在被举报之前，徐阳家养猪产生的排泄物像村里其他养猪户一样，排进不远处的天坑（一种喀斯特地形，多为岩溶塌陷而成，直径与深度常超百米，底部多与地下水相通）里。天坑笔直，深不见底。</p><p>徐阳认为自己家被举报是因为枪打出头鸟。他们家是村里最早开始养猪的几家之一。在2020年下半年开始，养猪在村里已经成为新一轮风潮。在此之前，村里流行过很多东西，比如种花椒树，养一种叫波尔山羊的肉羊，还有养牛。政府宣布长江禁渔十年以后，养殖水产也不让搞了。几乎家家户户都在养猪。这个在湖北宜昌、长江中游的村子是当时中国养猪热潮的一个缩影。根据中国农业农村部的统计，2020年全国规模猪场比年初增加1.6万家，散养户比年初增加228万户。</p><p>史无前例的高利润强烈刺激着所有人。徐阳不知道谁家到底养了多少头猪，大家即便是闲谈也避讳这个话题，但徐阳知道大家都在盖猪场。徐家之前的两批生猪都养在原来的养殖场里。那是一片早就租下的大空地。打上几个桩，上面再加上一个盖，四周一围，简单改造后就变成了养猪场。村里原来一位有头面的人物也在徐家新建猪场时同期搞起了养猪，投入了200多万元，建起“像楼房一样”的养猪场。徐家所在的南方村落，房子分散，空地很多。</p><p>被举报环保问题之后，徐家决定顺势重建猪场。他们在自己农田上新建了两个总共能容下200多头生猪的猪棚，花了20多万元。新的猪场有水泥地面，每个圈还装了空调和取暖灯。但当他们想要扩建时才发现，村里没有瓦匠了。那是在2020年下半年，甚至连只干过力工（即给懂得建造技术的瓦匠提供砖、泥等材料的工种）的人也被请去当瓦匠。他们全被雇去建猪圈。</p><p>徐阳的姨夫在他们决定养第二批生猪的时候，也加入进来。他们相约一起进购猪饲料，想降低些成本。徐家的邻居也开始养猪，在2020年春节期间，他们就开始大建猪圈。蓄水池、化粪池一应俱全，前后投入接近100万元。其中化粪池就花去了40多万。徐阳新建的猪场仍然没有安装化粪池。他们雇大型铲车在新猪场旁挖了一个5米左右的深坑，上面加盖后“伪装”成功。通过邻居老婆的家乡在东北这层关系，他们还合伙买来一卡车玉米，也是为了降低喂养成本。</p><p>就是在2020年下半年，生猪链条上的母猪和猪仔价格也在暴涨。仅仅一年的时间里，一头猪仔的价格已经涨至1500元。“最疯狂的时候一头小猪1800元。”徐阳说。最初卖给他家300头猪仔的亲戚也不再卖猪仔给他们，都留下来自己养了，甚至还想再多买。而能养大用来繁殖的小母猪价格则涨到了每只4000多元。</p><p>其实还有价格更高的地方。在浙江嘉兴，养了快30年猪的谷文华都觉得意外。在当地，同一时间段，出栏生猪每斤的价格最高涨到了22.5元，而在2018年的时候还只有5元多。一头小猪的价格可以卖到2800元甚至3000元。如果是能养大用来繁殖的小母猪，可以高达6000元。“那个时候我们养一头猪能赚四五千块钱。”</p><p>即使是如此高的价格，也常常有价无市。不论是在湖北宜昌的徐家，还是在浙江嘉兴的谷家，他们都遇到大家抢猪的情况。谷文华在农村老家2019年饲养和繁育的这一批猪就是靠他找到本地母猪仔才发展起来，当时只买到了3只。而徐阳的父母也是靠拜托不同农家才凑齐了一批母猪仔。那个时候，一窝猪仔常常刚出生，就已经被许诺给很多人。</p><p><a class="image" href="https://theinitium.com/article/20220905-international-pig-farmers-in-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/a89f0538bc1d4c27a2c441b15010f28e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年9月17日，顾客走过广西省南宁市市场的猪肉摊位。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>第一批赚到钱后，徐家旋即决定再多抓些猪来养。他们从在江苏一家专业猪场做经理人的亲戚那里赊来了300只一个多月大的猪仔，每只300元。从江苏太湖到湖北宜昌，长途跋涉让到家后的小猪陆续死去一些，最后成活不到270个。在饲养6个月左右之后，第二批生猪也到了出栏的时候。徐家迎来了生猪收购价格顶峰。</p><p>“我们挣钱的时候就是那一批。”徐阳说。2019年11月多，徐家的生猪卖到了每斤19元钱。整个生猪市场彼时的价格相比于一年半以前暴增了262%。这一批的生猪一直陆续卖到2020年4月。徐家进账100多万元。</p><p><a class="image" href="https://theinitium.com/article/20220905-international-pig-farmers-in-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/3bb664d3b1ad4a759f83fdf607cd0bc1.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption"><span class="credit"></span></figcaption><p></p><p>但是，就在第二批猪卖掉不久，徐家的养猪场被村民举报环境污染。很快，从村委会到畜牧局甚至水利局的人都来了，看起来情势严重。徐家开始面临罚款，而后罚款变为整改。上面要求徐家修建正规化粪池。在被举报之前，徐阳家养猪产生的排泄物像村里其他养猪户一样，排进不远处的天坑（一种喀斯特地形，多为岩溶塌陷而成，直径与深度常超百米，底部多与地下水相通）里。天坑笔直，深不见底。</p><p>徐阳认为自己家被举报是因为枪打出头鸟。他们家是村里最早开始养猪的几家之一。在2020年下半年开始，养猪在村里已经成为新一轮风潮。在此之前，村里流行过很多东西，比如种花椒树，养一种叫波尔山羊的肉羊，还有养牛。政府宣布长江禁渔十年以后，养殖水产也不让搞了。几乎家家户户都在养猪。这个在湖北宜昌、长江中游的村子是当时中国养猪热潮的一个缩影。根据中国农业农村部的统计，2020年全国规模猪场比年初增加1.6万家，散养户比年初增加228万户。</p><p>史无前例的高利润强烈刺激着所有人。徐阳不知道谁家到底养了多少头猪，大家即便是闲谈也避讳这个话题，但徐阳知道大家都在盖猪场。徐家之前的两批生猪都养在原来的养殖场里。那是一片早就租下的大空地。打上几个桩，上面再加上一个盖，四周一围，简单改造后就变成了养猪场。村里原来一位有头面的人物也在徐家新建猪场时同期搞起了养猪，投入了200多万元，建起“像楼房一样”的养猪场。徐家所在的南方村落，房子分散，空地很多。</p><p>被举报环保问题之后，徐家决定顺势重建猪场。他们在自己农田上新建了两个总共能容下200多头生猪的猪棚，花了20多万元。新的猪场有水泥地面，每个圈还装了空调和取暖灯。但当他们想要扩建时才发现，村里没有瓦匠了。那是在2020年下半年，甚至连只干过力工（即给懂得建造技术的瓦匠提供砖、泥等材料的工种）的人也被请去当瓦匠。他们全被雇去建猪圈。</p><p>徐阳的姨夫在他们决定养第二批生猪的时候，也加入进来。他们相约一起进购猪饲料，想降低些成本。徐家的邻居也开始养猪，在2020年春节期间，他们就开始大建猪圈。蓄水池、化粪池一应俱全，前后投入接近100万元。其中化粪池就花去了40多万。徐阳新建的猪场仍然没有安装化粪池。他们雇大型铲车在新猪场旁挖了一个5米左右的深坑，上面加盖后“伪装”成功。通过邻居老婆的家乡在东北这层关系，他们还合伙买来一卡车玉米，也是为了降低喂养成本。</p><p>就是在2020年下半年，生猪链条上的母猪和猪仔价格也在暴涨。仅仅一年的时间里，一头猪仔的价格已经涨至1500元。“最疯狂的时候一头小猪1800元。”徐阳说。最初卖给他家300头猪仔的亲戚也不再卖猪仔给他们，都留下来自己养了，甚至还想再多买。而能养大用来繁殖的小母猪价格则涨到了每只4000多元。</p><p>其实还有价格更高的地方。在浙江嘉兴，养了快30年猪的谷文华都觉得意外。在当地，同一时间段，出栏生猪每斤的价格最高涨到了22.5元，而在2018年的时候还只有5元多。一头小猪的价格可以卖到2800元甚至3000元。如果是能养大用来繁殖的小母猪，可以高达6000元。“那个时候我们养一头猪能赚四五千块钱。”</p><p>即使是如此高的价格，也常常有市无价。不论是在湖北宜昌的徐家，还是在浙江嘉兴的谷家，他们都遇到大家抢猪的情况。谷文华在农村老家2019年饲养和繁育的这一批猪就是靠他找到本地母猪仔才发展起来，当时只买到了3只。而徐阳的父母也是靠拜托不同农家才凑齐了一批母猪仔。那个时候，一窝猪仔常常刚出生，就已经被许诺给很多人。</p><p><a class="image" href="https://theinitium.com/article/20220905-international-pig-farmers-in-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/a89f0538bc1d4c27a2c441b15010f28e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年9月17日，顾客走过广西省南宁市市场的猪肉摊位。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2019年9月17日，顾客走过广西省南宁市市场的猪肉摊位。<span class="credit">摄：Qilai Shen/Bloomberg via Getty Images</span></figcaption><p></p><p>暴跌就像疯涨一样</p><p>
 </p><p>刚出生没多久的猪仔被直接遗弃在村子的山上、水沟里、道路旁，几乎随处可见。</p>
 <p></p><p>下行的迹象在2021年春节（公历2月）以后开始显露。从2021年2月份开始，伴随着母猪、猪仔、肥猪的全面暴涨，生猪市场供需关系转为供大于求，猪肉价格的下降，生猪价格连续下降直至腰斩。全国猪肉市场价格从2021年2月的每斤21.68元一路降到10月的9.76元。</p><p>作为生猪供应市场的一个标志性数据——“能繁”母猪，即可以繁殖小猪仔的母猪，在2020年下半年至2021年下半年，已经增长至4500多万头，这个数字在2019年同期只有1900多万。生猪出栏量在2021年从第一季度的1.7亿多头一路增加到了第四季度的6.7亿多头。这意味着2021年的数据已经基本追平了非洲猪瘟到来前的2018年。</p><p>猪价的暴跌就像当时疯涨一样。谷文华在2021年春节前就清仓了手上的肥猪和猪仔。彼时的价格仍在高位。他的很多同行并不理解，大家当时的选择都是压栏，即就算已经到了宰杀体重仍然继续喂养生猪而不出售。一般而言，这一行为的背后要么是认为出价不够负担成本，要么则是认为上升空间还未见顶。谷文华当时的生猪出栏价格是每斤19元。不论斤重，有人来买就卖。</p><p>“我估计要掉了。”谷文华说。他一直在关注政府发出的全国生猪存栏量，更重要的是他清楚自己周边同行的情况，“大家都这么多，你还压栏压在里面，到时候人家都要卖了，不是你亏死了。”</p><p>事实证明，谷文华的感觉很准。他眼看着其他养殖户的生猪出栏价格不停走低——19、18、15、13、10、8。“到后来10块（一斤）、8块（一斤）都是他们自己喊出来的，卖不掉。”</p><p>跌价在小猪仔上最先表现出来，也最极端。谷文华在2021年春节前出售的小猪仔每头370元，重30斤左右。这一价格只是保住了成本。“帮人家养。”徐家的经历也大致如此，但徐阳觉得，他们还算搭上了末班车。</p><p>在2020年上半年卖光第二批生猪以后，徐阳和父母做了一个决定，他们计划转变经营重点到养殖母猪和贩卖猪仔。之所以要跳转方向，除了徐家也已经觉察到生猪饲养的价格早已不是刚进入时的水平以外，另外一些信号让他们感到警觉。比如饲料价格也在一路上涨，还有玉米、大豆等粮食作物长得更加厉害，“每一斤（生猪）的成本已经接近10块”，比开始的时候涨了3块。</p><p>“那个时候，最赚钱的已经不是育肥猪，而是母猪。按照当时这个价格的话，第二年我们就是纯收（入）百万。”当时的当地母猪猪仔一头的价格是4000多元，小猪仔1200元左右。但徐家并没有培育良种母猪的经验，来之不易的十多只母猪猪仔在后来全部死亡，他们只剩下大搞养猪业之初自己家里旧有土母猪，只有6头。</p><p>到了2021年三四月份，徐家以每头450元的价格卖掉了猪仔。相比于最高点的1800元已经跌去75%。徐阳说：“（20）21年我们还赶上了最后一波，因为别人的母猪还没长成的时候，我们的就已经生了。等大家的母猪都繁育起来了，猪肉就不值钱了。”</p><p>又是不到一年的时间，2021下半年，不论是浙江嘉兴，还是湖北宜昌，情况再次惊人地相似。刚出生没多久的猪仔被直接遗弃在村子的山上、水沟里、道路旁，几乎随处可见。</p><p>徐阳说：“市场上小猪仔特别多，50（元）、100（元），没人要。有的就白送。我们很多都扔了。”而在谷文华那边，还专门出现挨家挨户去捡拾猪仔的人。曾经被疯抢的母猪也被低价处理。“去年淘汰了好多母猪，（有的）母猪都大着肚子，（有的）在卖的时候都在生小猪。”</p><p>像雪崩一样由小变大，当失去平衡的积雪真正到达眼前时，已经在劫难逃。在2020年生猪价格高点进入的人被深度套牢。到了2021年，湖北宜昌当地的生猪收购价格降到了每斤7元多，甚至还出现过5元多的时刻。邻居在刚开始加入时告诉徐阳自己买了23头母猪和50多头小猪。现在，徐家的邻居卖掉了在城里买的房子，只能硬扛。“就是压在那里动不了，现在猪价不是又落下来了。”徐阳说，邻居在村里所小有所成，原本攒下的积蓄几乎都以肉眼可见的方式投在了养猪上。</p><p>不是所有人都能扛住。徐阳说：“我同学的表姑，离我们不太远，但是都知道的，上吊死了。”她的情况是当地养猪热潮的一个悲伤注脚——把积蓄拿出来盖猪场，但最终失败，不仅如此，还欠下供应商的饲料钱、建猪场的工人工资等费用，无力偿还。</p><p>压垮徐阳同学表姑的最后一根稻草是她养的猪都死了。徐阳老家在2019年下半年，也开始成批出现猪群死亡的现象。死因大家猜测就是在2018年8月首次出现并在一年之内传遍中国大陆的非洲猪瘟。非洲猪瘟让国内市场中的上百万只生猪病死或者被扑杀，同时还引发了行业内的恐慌性抛售。短时间内市场上的生猪存量骤减。</p><p></p><h3>非洲猪瘟病毒</h3><figcaption>端百科： 非洲猪瘟病毒（African swine fever ，ASF）首次发现于非洲，至今已经在非洲、欧洲、亚洲、中美洲、大洋洲总计74个国家爆发。非洲猪瘟病毒在自然环境中仍可以存活，通过接触传播，既可以通过吸血昆虫，也可以通过被病毒污染的物体，比如病猪、饲料、泔水、器具、甚至人也可以成为转播介质。研究表明短距离内，非洲猪瘟甚至可以空气传播。</figcaption><p></p><p>作为一种急性、热性、高度接触性传染病，非洲猪瘟的致死率可高达100%。它由非洲猪瘟病毒引起，从首次发现至今已经超过一个世纪。但科学界至今没有研制出针对这一古老病毒的疫苗。目前唯一的方法是，一经发现，立即扑杀并进行无害化处理。</p><p>非洲猪瘟只感染猪，不感染人类或其他物种。但这一病毒具有极强的环境生存能力。对于不同温度、腐败和干燥、某些化学物质、物理处理等，具有强大的抵抗力。这让它无孔不入。人们防不胜防。</p><p>非洲猪瘟给徐家和他们的村里人带来财富机会，但同时须臾之间，就会露出灾难的爪牙。</p><p><a class="image" href="https://theinitium.com/article/20220905-international-pig-farmers-in-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/fac19a983ef14149aebb6213663ebcd6.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2018年8月22日，浙江省金华市，身穿防护服的工作人员在养猪场进行消毒，为预防非洲猪瘟散播。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
