Update VOCUS 2022-09-06 patch

--- a/_posts/2022-09-05-VOCUS-不敢考太好的邦妮.html
+++ b/_posts/2022-09-05-VOCUS-不敢考太好的邦妮.html
@@ -8,9 +8,7 @@ tags: blog
 author: 王大明-寫出可以與小孩分享的法律故事
 ---
 
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://player.soundon.fm/p/fe8ef76a-abb2-450e-b80b-4725251ea474/episodes/5481e347-60c5-47b0-800a-01298867f70c"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://player.soundon.fm/p/fe8ef76a-abb2-450e-b80b-4725251ea474/episodes/5481e347-60c5-47b0-800a-01298867f70c"></iframe></div>
 <div class="draft-block draft--p left"> 這是「<a href="https://vocus.cc/article/6314c868fd89780001a684c6" target="_blank" class="draft--a">不敢考太好的邦妮</a>」故事的完整版。</div>
 <div class="draft-block draft--p left">包含解析、音檔、以及延伸閱讀，歡迎訂閱專題。</div>
 <h2 class="draft-block draft--h2" name="header-dqdno">參考資料：</h2>
@@ -23,7 +21,3 @@ author: 王大明-寫出可以與小孩分享的法律故事
   <li class="draft-block draft--li"><a href="https://www.techbang.com/posts/16241-remove-a-book-the-mysterious-self-catering-papers-in-order-empty-rooms-bookcases-desks" target="_blank" class="draft--a">拆掉一本書，神奇「自炊」整理術，把房間、書櫃、辦公桌清空</a></li>
   <li class="draft-block draft--li">「<a href="https://topic.tipo.gov.tw/copyright-tw/cp-407-853613-69115-301.html" target="_blank" class="draft--a">自製電子書</a>」的智財局函釋</li>
 </ol>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
