--- a/_posts/2022-09-05-VOCUS-三千年的渴望-人類許個願吧.html
+++ b/_posts/2022-09-05-VOCUS-三千年的渴望-人類許個願吧.html
@@ -43,4 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/9eb567e9-417b-4010-ba6c-ab2a22f31fa8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">我覺得比起原作《夜鶯眼中的巨靈》警示寓言的部分，《三千年的渴望》則是繼續將他續長了十多年的現代，並且用著導演自己想詮釋的方式，不管是魔幻或科學的，不要忘記不管兩者的哪一種都還有許多未知等著有人去看到並理解他。就某方面科學與科技的初宗就是一種人類自身的魔法。</div>
 <div class="draft-block draft--p left">《古蘭經》視瓶中精靈中為惡魔，是先知的仇敵，故精靈的願望預預言通常作為人類欲望的咎由自取，但阿拉既然用泥土造人，用火創造了精靈，那精靈的存在便有他的意義。我認為《三千年的渴望》再詮釋了關於阿拉伯等中東國家的神話人物，有了適合當代的意象是有趣的，當然願望本身就是人類的慾，而實現慾望的神燈精靈是對是錯，也許最終還是由人自己主宰。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/oI0_FeGtfSw"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/oI0_FeGtfSw"></iframe></div>
