--- a/_posts/2022-09-05-INMEDIA-陳家珮確診新冠-曾連日出席公開活動.html
+++ b/_posts/2022-09-05-INMEDIA-陳家珮確診新冠-曾連日出席公開活動.html
@@ -14,6 +14,6 @@ author: 獨媒報導
 <p>在周日（4日）舉行的「青年國民教育系列：尋根文化之旅」誓師儀式，文化體育及旅遊局局長楊潤雄、懲教署署長黃國興亦為同場嘉賓，陳家珮曾上台和一眾「更生先鋒領袖」作分享。</p>
 <p>而在前一日即周六，陳家珮則出席沙頭角抗戰紀念館揭幕典禮，多名官員包括行政長官李家超、政務司司長陳國基同有出席，陳家珮在典禮後與十多名立法會議員同事合照，包括民建聯劉國勳、葛珮帆、張欣宇和容海恩等人。</p>
 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FJudyChanKaPui%2Fposts%2Fpfbid02vKwwCRkoiwpypdGhSMJe43g3mZnFgcrcds7WMHJ7TXZMuvgMcH1rGc7X3Fvok9nul&amp;show_text=true&amp;width=500" width="500" height="754" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe><p><em>她在周六出席沙頭角抗戰紀念館揭幕典禮</em></p>
-<p>上周五（2日），其位於筲箕灣區的議員辦事處開幕，出席嘉賓包括當日勞福局局長孫玉菡，以及新民黨主席葉劉淑儀，三人曾同場一段時間。</p>
+<p>上周五（2日），其位於筲箕灣區的議員辦事處開幕，當日出席嘉賓包括勞福局局長孫玉菡，以及新民黨主席葉劉淑儀，三人曾同場一段時間。</p>
 <p>陳家珮是第16名感染的立法會議員，其他議員包括黃俊碩、時任議員麥美娟、梁文廣、劉智鵬、鄭泳舜、陳祖恒、劉業強、何俊賢、嚴剛、陳紹雄、黃國、簡慧敏、鄧家彪、劉國勳及何君堯。</p>
 </div></div></div>
