--- a/_posts/2022-09-06-PQ-聯合國大會召開在即-立法院組視導團赴紐約為台灣發聲.html
+++ b/_posts/2022-09-06-PQ-聯合國大會召開在即-立法院組視導團赴紐約為台灣發聲.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-1024x629.png" alt="" class="wp-image-113528" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-1024x629.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-300x184.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-768x472.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-1536x944.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-2048x1259.png 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>第 77 屆聯合國（UN）大會議程／圖：聯合國官方網站。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-1024x629.png" alt="" class="wp-image-113528" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-1024x629.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-300x184.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-768x472.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-1536x944.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0f177954-螢幕擷取畫面-2022-09-05-220736-2048x1259.png 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>第 77 屆聯合國（UN）大會議程／圖：聯合國官方網站。</figcaption></figure></div>
 
 
 
@@ -72,11 +72,11 @@ author: 林志鴻
 
 
 
-<p>吳釗燮指出，台灣在疫情爆發後向世界各地提供人道援助，包括俄烏戰爭爆發以來送往烏克蘭 550 噸以上救援物資，捐款超過 4000 萬美元，同時也在全球供應鏈中扮演重要角色；台灣非常願意也能成為國際聯合解決方案的一部分，台灣 2350 萬具韌性的人民不應被排除在這種國際努力之外。</p>
+<p>吳釗燮指出，台灣在疫情爆發後向世界各地提供人道援助，包括俄烏戰爭爆發以來送往烏克蘭 550 噸以上救援物資，捐款超過 4,000 萬美元，同時也在全球供應鏈中扮演重要角色；台灣非常願意也能成為國際聯合解決方案的一部分，台灣 2,350 萬具韌性的人民不應被排除在這種國際努力之外。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f-1024x682.jpeg" alt="" class="wp-image-113516" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>外交部長吳釗燮指出，台灣在疫情爆發後向世界各地提供人道援助，包括俄烏戰爭爆發以來送往烏克蘭 550 噸以上救援物資，捐款超過 4000 萬美元。圖為吳釗燮 5 月 31 日與烏克蘭第二大城哈爾科夫市長切列霍夫（Ihor Terekhov）視訊對話／圖：外交部提供。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f-1024x682.jpeg" alt="" class="wp-image-113516" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/0a4b046e-2db2cc0cda35fd616444d8578103f85f.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>外交部長吳釗燮指出，台灣在疫情爆發後向世界各地提供人道援助，包括俄烏戰爭爆發以來送往烏克蘭 550 噸以上救援物資，捐款超過 4,000 萬美元。圖為吳釗燮 5 月 31 日與烏克蘭第二大城哈爾科夫市長切列霍夫（Ihor Terekhov）視訊對話／圖：外交部提供。</figcaption></figure></div>
 
 
 
