Update VOCUS 2022-09-07 patch

--- a/_posts/2022-09-04-VOCUS-不敢考太好的邦妮.html
+++ b/_posts/2022-09-04-VOCUS-不敢考太好的邦妮.html
@@ -1,15 +1,14 @@
 ---
 layout: post
 title: 不敢考太好的邦妮
-date: 2022-09-04 17:38:04.000000000 +00:00
+date: 2022-09-04 07:38:04.000000000 +00:00
 link: https://vocus.cc/user/@jimchu/6314c868fd89780001a684c6
 categories: vocus
 tags: blog
 author: 王大明-寫出可以與小孩分享的法律故事
 ---
 
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://player.soundon.fm/p/fe8ef76a-abb2-450e-b80b-4725251ea474/episodes/5481e347-60c5-47b0-800a-01298867f70c"></div>
+<div><iframe allowfullscreen src="https://player.soundon.fm/p/fe8ef76a-abb2-450e-b80b-4725251ea474/episodes/5481e347-60c5-47b0-800a-01298867f70c"></iframe></div>
 <div class="draft-block draft--p left">邦妮是一個「存在感很低」的高中生。</div>
 <div class="draft-block draft--p left">「存在感」是一個很抽象的感覺，就是這個人明明每天都有來上課，<br>每天都會見到面，但你就是會想不起她的臉。</div>
 <div class="draft-block draft--p left">所以，同學分組時經常忽略她、同學逛街時不會找她；<br>甚至老師有什麼差事想找同學幫忙，也從不會想到她。</div>
