--- a/_posts/2022-09-06-PQ-成員資訊遭徐巧芯公布-陳時中競辦-侵害他人隱私應道歉.html
+++ b/_posts/2022-09-06-PQ-成員資訊遭徐巧芯公布-陳時中競辦-侵害他人隱私應道歉.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/113bc8f3-302312153_629985298490812_6503262944132387565_n-768x1024.jpg" alt="" class="wp-image-113600" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/113bc8f3-302312153_629985298490812_6503262944132387565_n-768x1024.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/113bc8f3-302312153_629985298490812_6503262944132387565_n-225x300.jpg 225w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/113bc8f3-302312153_629985298490812_6503262944132387565_n.jpg 1108w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>徐巧芯表示，沒公佈私人訊息，況且這份資料也不是由她收集的，和個資法無關／圖：徐巧芯臉書。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/113bc8f3-302312153_629985298490812_6503262944132387565_n-768x1024.jpg" alt="" class="wp-image-113600" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/113bc8f3-302312153_629985298490812_6503262944132387565_n-768x1024.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/113bc8f3-302312153_629985298490812_6503262944132387565_n-225x300.jpg 225w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/113bc8f3-302312153_629985298490812_6503262944132387565_n.jpg 1108w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>徐巧芯表示，沒公佈私人訊息，況且這份資料也不是由她收集的，和個資法無關／圖：徐巧芯臉書。</figcaption></figure></div>
 
 
 
