--- a/_posts/2022-09-06-INITIUM-晚报-中国四川省地震死亡人数增至65人-海螺沟景区约300人被困.html
+++ b/_posts/2022-09-06-INITIUM-晚报-中国四川省地震死亡人数增至65人-海螺沟景区约300人被困.html
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: 晚报：中国四川省地震死亡人数增至65人，海螺沟景区约300人被困
-date: 2022-09-06 10:37:00.000000000 +00:00
+date: 2022-09-06 02:37:00.000000000 +00:00
 link: https://theinitium.com/article/20220906-evening-brief/
 categories: initium
 tags: blog
 author: 
 ---
 
-<figure class="image" itemscope="" itemtype="https://schema.org/ImageObject"><a class="image"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/ace4a6f1b65e40258ef3f334d337abff.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月5日在中国四川省甘孜州泸定县，救援人员正在拯救数名被困灾民。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220906-evening-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/ace4a6f1b65e40258ef3f334d337abff.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月5日在中国四川省甘孜州泸定县，救援人员正在拯救数名被困灾民。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年9月5日在中国四川省甘孜州泸定县，救援人员正在拯救数名被困灾民。<span class="credit">图片来源：CFOTO / Future Publishing via Getty Images</span></figcaption></figure><h3>中国四川省地震死亡人数增至65人，海螺沟景区约300人被困</h3>
 <p>中国四川省甘孜州泸定县昨日（5日）发生里氏6.8级（台称：里氏震级 6.8）地震，<a href="http://big5.news.cn/gate/big5/www.news.cn/politics/2022-09/06/c_1128979973.htm">官媒新华社称死亡人数增至65人，另有逾200人受伤、12人失踪</a>。</p>
 <p>据甘孜州抗震救灾指挥部公布，截至今早（6日）甘孜州有37人遇难、12人失踪，另有约170人受伤，其中56人重伤。另据雅安市石棉县委宣传部公布，截至今早石棉县有28人遇难、78人受伤。</p>
@@ -43,4 +43,4 @@ author:
 <h3>港警拘捕一名诊所医生，指她涉嫌发出逾6000张“免针纸”</h3>
 <p>香港警方确认较早前拘捕一名医生，<a href="https://news.rthk.hk/rthk/ch/component/k2/1665721-20220906.htm">指她涉嫌发出逾6000张“免针纸”，涉及罪名为“伪造文书罪”</a>。</p>
 <p>警方早前接报，称元朗有诊所涉嫌未与市民诊症或检视病历纪录，便发出俗称“免针纸”的“新冠疫苗接种医学豁免证明书”，每次收取诊金500港元。警方昨日（5日）到诊所搜查，初步调查显示单计上月有逾6000人到该诊所求医，警方以涉嫌伪造虚假文书罪，拘捕姓蔡的64岁诊所负责人。</p>
-<p>香港特首李家超今天出席行政会议前会见传媒，期间回应事件。他指行使或发放虚假文书属严重罪行，呼吁公众不要以身试法。他提到如果有医务人员涉嫌专业失德，当局会将有关个案送交医委会严肃跟进，希望公众遵守防疫政策。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank"="">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
+<p>香港特首李家超今天出席行政会议前会见传媒，期间回应事件。他指行使或发放虚假文书属严重罪行，呼吁公众不要以身试法。他提到如果有医务人员涉嫌专业失德，当局会将有关个案送交医委会严肃跟进，希望公众遵守防疫政策。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
