Update VOCUS 2022-09-08 patch

--- a/_posts/2022-09-07-VOCUS-因為你不知道-還有哪些是你不知道的.html
+++ b/_posts/2022-09-07-VOCUS-因為你不知道-還有哪些是你不知道的.html
@@ -32,8 +32,7 @@ author: 鱸魚
 <div class="draft-block draft--p left">剛進職場的頭幾年我只知道埋頭學習，由於努力學習又吸收得快，短短幾年就升為資深人員 - 那也是愚蠢自大的開始。又深耕五年以後我突然開始信心大增，嘴巴雖然不說，但心裡慢慢把自己當作領域權威。我把「權威」的標準降到這麼低，因為我根本不知道還有哪些是我不知道的。</div>
 <div class="draft-block draft--p left">然後我又發現過去所知道的很多竟是錯的，同時又發現打開下一扇門之後，另一個房間裡全是我不知道的，而領域的途徑上竟有這麼多扇尚未打開的門。</div>
 <div class="draft-block draft--p left">當認知走到這一步的時候，你很可能已經燒掉了10年光陰。這時候回頭看看當年的愚蠢高峰，才真的覺得嘴巴上的謙卑，根本改變不了任何事情。我們需要的是認知上的謙卑，要認清自己還有多少不知道的。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/2A7mblg5UKc"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/2A7mblg5UKc"></iframe></div>
 <div class="draft-block draft--p left">太空物理學家<a href="https://zh.m.wikipedia.org/zh-hant/%E5%A5%88%E7%88%BE%C2%B7%E5%BE%B7%E8%91%9B%E6%8B%89%E5%8F%B8%C2%B7%E6%B3%B0%E6%A3%AE" target="_blank" class="draft--a">尼爾泰森</a>曾經說過一句令人省思的話。<span style="font-style: italic; ">這個世界面臨最大的挑戰是</span>：<span style="font-style: italic; ">對特定領域知道得剛好夠堅信自己是對的； 但不夠認知自己所知全是錯的。</span>這句話也說明了略知一二的時候最危險。</div>
 <div class="draft-block draft--p left">職場領域上錯了都不知道，而大家卻把你當專家看的時候，那才是最可怕的成長過程 - 於公於私都是。在新創公司這種風險就更高，因為公司沒有足夠的資源平衡無知。</div>
 <h2 class="draft-block draft--h2" name="header-3005c">網路時代的新災難</h2>
@@ -57,5 +56,3 @@ author: 鱸魚
 <div class="draft-block draft--p left">慢慢向上爬升，把那條「知與不知」的界線穩健持續推向更高的境界很令人心滿意足。我珍惜這種小小的成就感，也在工作上和嗜好上，都試著享受那慢慢向上推的過程。一旦過了愚蠢高峰，你會發現後面的進步是一種享受。每一步的進步都是。</div>
 <div class="draft-block draft--p left">野人献曝「鄧寧-克魯格效應」，請不要見笑，這只是個人悟出一點小小的人生哲學。說是嗜好哲學也可以。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/12bbf41c-beaa-40d3-8de5-0436aa185b13.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
