--- a/_posts/2022-09-07-PQ-抗中保台-湧言會宣示簽-不投降承諾書-組-民防問政聯盟.html
+++ b/_posts/2022-09-07-PQ-抗中保台-湧言會宣示簽-不投降承諾書-組-民防問政聯盟.html
@@ -24,7 +24,7 @@ author: 潘柏廷
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-1024x683.jpg" alt="" class="wp-image-113720" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民進黨立委王定宇。圖／潘柏廷拍攝</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-1024x683.jpg" alt="" class="wp-image-113720" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/9cd46000-img_0317-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民進黨立委王定宇。圖／潘柏廷拍攝</figcaption></figure></div>
 
 
 
@@ -56,7 +56,7 @@ author: 潘柏廷
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-1024x683.jpg" alt="" class="wp-image-113724" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-1024x683.jpg" alt="" class="wp-image-113724" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/73c924aa-img_0333-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民進黨立委趙天麟。圖／潘柏廷拍攝</figcaption></figure></div>
 
 
 
@@ -96,7 +96,7 @@ author: 潘柏廷
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-1024x683.jpg" alt="" class="wp-image-113726" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台北市議員張志豪。圖／潘柏廷拍攝</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-1024x683.jpg" alt="" class="wp-image-113726" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/7c585618-img_0371-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>新北市議員張志豪。圖／潘柏廷拍攝</figcaption></figure></div>
 
 
 
