--- a/_posts/2022-09-07-INMEDIA-元朗朗屏邨業主大會-法團平日旺角麥花臣舉行-爭議中通過管理公司續約.html
+++ b/_posts/2022-09-07-INMEDIA-元朗朗屏邨業主大會-法團平日旺角麥花臣舉行-爭議中通過管理公司續約.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p>朗屏邨特別業大會今日舉行，法團安排12架旅遊巴接送出席居民。《獨媒》記者今早在場觀察，早上10時許已陸續有居民自行到場，巴士則於早上約10時10分起到達場外，現場於10時15分開始登記。<a href="https://www.inmediahk.net/node/%E5%AA%92%E9%AB%94/%E9%99%B3%E6%9C%97%E6%98%87%E6%8E%A1%E8%A8%AA%E6%9C%9F%E9%96%93%E8%A2%AB%E6%8D%95-%E8%AD%A6%E6%8C%87%E9%98%BB%E5%B7%AE%E8%BE%A6%E5%85%AC%E3%80%81%E5%85%AC%E7%9C%BE%E5%9C%B0%E6%96%B9%E8%A1%8C%E7%82%BA%E4%B8%8D%E6%AA%A2">期間在現場採訪的《Channel C》副採訪主任、記協主席陳朗昇</a>，遭警方以「妨礙警務人員執行職務」及「在公眾地方行為不檢」拘捕。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/cJ0k1u9aA9" title="無標題"><img src="https://live.staticflickr.com/65535/52340595030_1a8db685eb_z.jpg" alt="無標題" /></a></p>
 <p><strong>居民未開會即遞聯署要求改選法團</strong></p>
-<p>大會開始前，「朗屏街坊會」成員先向法團主席陳雄漢遞交聯署要求召開業主大會。他們收集到534名業主簽署，內容包括要求查閣2021年6月至2022年5月期間的法團財務細節；要求超過每年預算20%的開支項目必須公開招標；大維修必須使用市建局「招標妥」以及改選法團管委會，並即場要求陳雄漢簽署確認。法團法律顧問、鍾沛林律師行代表陳志華表示，法例未有規定法團主席必須簽收，陳雄漢接過聯署亦無簽名。</p>
+<p>大會開始前，「<a href="https://www.facebook.com/LongPingKaiFong/">朗屏邨街坊會</a>」成員先向法團主席陳雄漢遞交聯署要求召開業主大會。他們收集到534名業主簽署，內容包括要求查閣2021年6月至2022年5月期間的法團財務細節；要求超過每年預算20%的開支項目必須公開招標；大維修必須使用市建局「招標妥」以及改選法團管委會，並即場要求陳雄漢簽署確認。法團法律顧問、鍾沛林律師行代表陳志華表示，法例未有規定法團主席必須簽收，陳雄漢接過聯署亦無簽名。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/QP5uEu92G6" title="無標題"><img src="https://live.staticflickr.com/65535/52340465309_38397c88ae_z.jpg" alt="無標題" /></a></p>
 <p><strong>發問程序惹不滿 管理公司員工拉人鏈阻擋</strong></p>
 <p>大會於約11時10分開始，逾200人出席。在場屢有業主舉手發問，有人質問「點解唔喺（朗屏邨內）八角廣場（開會）？」、「（預約）麥花臣你洗咗幾多錢？」未獲理會。</p>
@@ -31,7 +31,7 @@ author: 獨媒報導
 <p>大會司儀在大會完結前，代表管理公司「多謝咁多位業戶支持」，惟引來噓聲及有人反擊「冇人支持你呀！」大會歷時約兩個半小時。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/R05228EX0m" title="無標題"><img src="https://live.staticflickr.com/65535/52340401733_4ca97b0a73_z.jpg" alt="無標題" /></a></p>
 <p><strong>居民擬組隊競選法團：寧願驚都想作出改變</strong></p>
-<p>「朗屏街坊會」成員馮小姐在會後向《獨媒》表示，認為法團無視業主權益，將大會安排在平日上午在旺角舉行。她指邨內及鄰近的元朗、屯門及天水圍皆有合適場地舉行，而大會進行期間，議決是否續約的管理公司亦未有避席。</p>
+<p>「朗屏邨街坊會」成員馮小姐在會後向《獨媒》表示，認為法團無視業主權益，將大會安排在平日上午在旺角舉行。她指邨內及鄰近的元朗、屯門及天水圍皆有合適場地舉行，而大會進行期間，議決是否續約的管理公司亦未有避席。</p>
 <p>資料顯示，在今日特別業主大會上，法團委員手持合共逾1,100戶授權，單是主席陳雄漢已獲608戶、業權份數達30,258份授權。馮小姐對結果亦不感意外，指今日主要目標是將5%業主聯署交到法團主席手上。她又對房屋署在續約事宜上未有行駛131,676份業權份數投下反對票表示失望，認為署方應協助小業主。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0Qf81896m3" title="無標題"><img src="https://live.staticflickr.com/65535/52340403618_8d4d2288c5_z.jpg" alt="無標題" /></a></p>
 <p>馮小姐表示，將召集有心人參選法團，苦笑稱「總要有人企出嚟」，「會覺得驚，但寧願驚，都想作出一啲改變。」</p>
