--- a/_posts/2022-09-07-INMEDIA-被壓工人傍晚被救出-證實不治-潘焯鴻指倒塌天秤焊接偷工減料.html
+++ b/_posts/2022-09-07-INMEDIA-被壓工人傍晚被救出-證實不治-潘焯鴻指倒塌天秤焊接偷工減料.html
@@ -22,4 +22,5 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/D738D3oQ6m" title="螢幕截圖 2022-09-07 下午6.28.59"><img src="https://live.staticflickr.com/65535/52340877645_b4f2f4d248.jpg" alt="螢幕截圖 2022-09-07 下午6.28.59" /></a><br /><em>涉事的R2-2號地盤鄰近安泰邨</em></p>
 <p>房協發言人表示，現正與項目承建商精進建築有限公司密切跟進事件，並會全力配合相關政府部門的調查工作，涉事的地盤已即時停工。房協總監（工程策劃）楊啟裕亦於今午到達地盤現場了解情況。事發後，房協責承轄下所有項目的承建商，再次檢查同類型天秤的操作以確保安全。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/j24M5SaW04" title="無標題"><img src="https://live.staticflickr.com/65535/52340617255_ec02da115b_z.jpg" alt="無標題" /></a></p>
+<p>精進建築有限公司亦發聲明，稱對工人傷亡深感難過，對「意外」感到震驚，對遇難者及家屬致以最深切慰問。該公司又指已聯絡相關職工家屬並盡力提供一切支援及協助，並全力配合相關調查。</p>
 </div></div></div>
